create-ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: create ec2

Resources:
  AWSStudyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: AWS-Study-VPC

  AWSStudyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AWS-Study-IGW

  AWSStudyVpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref AWSStudyVpc
      InternetGatewayId: !Ref AWSStudyInternetGateway

  AWSStudyPublicSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSStudyVpc
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: AWS-Study-Public-Subnet-1a

  AWSStudyPublicSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSStudyVpc
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: AWS-Study-Public-Subnet-1c

  AWSStudyPrivateSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSStudyVpc
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: AWS-Study-Private-Subnet-1a

  AWSStudyPrivateSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref AWSStudyVpc
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: 10.0.11.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: AWS-Study-Private-Subnet-1c

  AWSStudyPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSStudyVpc
      Tags:
        - Key: Name
          Value: AWS-Study-Public-RouteTable

  AWSStudyPublicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AWSStudyVpcGatewayAttachment
    Properties:
      RouteTableId: !Ref AWSStudyPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref AWSStudyInternetGateway

  AWSStudyPublicSubnetAz1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AWSStudyPublicSubnetAz1
      RouteTableId: !Ref AWSStudyPublicRouteTable

  AWSStudyPublicSubnetAz2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AWSStudyPublicSubnetAz2
      RouteTableId: !Ref AWSStudyPublicRouteTable

  AWSStudyPrivateRouteTableAz1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSStudyVpc
      Tags:
        - Key: Name
          Value: AWS-Study-Private-RouteTable-1a

  AWSStudyPrivateRouteTableAz2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref AWSStudyVpc
      Tags:
        - Key: Name
          Value: AWS-Study-Private-RouteTable-1c

  AWSStudyPrivateSubnetAz1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AWSStudyPrivateSubnetAz1
      RouteTableId: !Ref AWSStudyPrivateRouteTableAz1

  AWSStudyPrivateSubnetAz2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref AWSStudyPrivateSubnetAz2
      RouteTableId: !Ref AWSStudyPrivateRouteTableAz2

  AWSStudySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH access
      VpcId: !Ref AWSStudyVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: AWS-Study-SG
  
  AWSStudyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0599b6e53ca798bb2
      SubnetId: !Ref AWSStudyPublicSubnetAz1
      SecurityGroupIds:
        - !Ref AWSStudySecurityGroup
      KeyName: saway
      Tags:
        - Key: Name
          Value: AWS-Study-EC2
      UserData:
        Fn::Base64: |
          #!/bin/bash
          dnf update -y
          dnf install -y git
          dnf install -y java-21-amazon-corretto-devel
          cd /home/ec2-user
          git clone https://github.com/koujienami/aws-study
          chown -R ec2-user:ec2-user /home/ec2-user/aws-study
          chmod +x /home/ec2-user/aws-study/gradlew
